# pyghidra-mcp

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: pytest-devcontainer-pypi-cli.yml  pytest-devcontainer-repo-cli.yml  release-cli.yml
cli/: Makefile  README.md  pyproject.toml
cli/src/pyghidra_mcp_cli/: __init__.py  client.py  main.py  utils.py
cli/src/pyghidra_mcp_cli/commands/: callgraph.py  decompile.py  delete.py  import_cmd.py  list.py  metadata.py  read.py  search.py  xref.py
cli/tests/integration/: conftest.py  test_cli_commands.py
cli/tests/unit/: test_client.py  test_version.py
src/pyghidra_mcp/: __init__.py  context.py  mcp_tools.py  models.py  server.py  tools.py
tests/integration/: conftest.py  test_concurrent_streamable_client.py  test_constraints_simple.py  test_list_project_binary_metadata.py  test_multiple_gpr_projects.py  test_open_projects.py  test_project_constraints.py  test_search_code.py
tests/unit/: test_models.py
