[project]
name = "pyghidra-mcp-cli"
version = "0.1.0"
description = "Command-line client for pyghidra-mcp server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.2.1",
    "mcp[cli]>=1.9.4",
    "pydantic>=2.0",
]

[project.scripts]
pyghidra-mcp-cli = "pyghidra_mcp_cli.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
    "aiohttp>=3.9.0",
    "ruff>=0.11.4",
    "pyright>=1.1.0",
    "tomli>=2.0.1",
    "pyghidra-mcp>=0.1.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "src/pyghidra_mcp_cli",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/pyghidra_mcp_cli",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "F",
    "B",
    "I",
    "UP",
    "N",
]
